--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sails-seed": "^0.5.0"
   },
   "devDependencies": {
-    "@sailshq/eslint": "^4.19.3"
+    "@sailshq/eslint": "^4.19.3",
+    "mocha": "^5.0.5"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
