--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@
 ################################################
 
 config/local.js
-
+config/datastores.js
 
 ################################################
 # Dependencies
