--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3",
-    "mocha": "^5.0.5"
+    "mocha": "^5.0.5",
+    "supertest": "^3.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
+    "test": "npm run lint && npm run custom-tests && mocha test/lifecycle.test.js test/integration/**/*.test.js && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
   },
