--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "async": "2.0.1",
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "0.0.3",
     "grunt": "1.0.1",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.22.1",
     "sails": "^1.0.0",
     "sails-hook-cron": "^3.0.0",
     "sails-hook-grunt": "^3.0.2",
